# MCP-Email_Assistant

./: .gitignore  CLAUDE_DESKTOP_SETUP.md  README.md  auth_server.py  call_tool.json  config.py  langgraph_flow.py  local_server.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  run_scheduler.py  security.md  start_services.bat
tools/: categorize_mail.py  draft_mail.py  read_mail.py  schedule_mail.py  scheduled_emails.json  scheduler_utils.py
